# crusty3-zk

./: Cargo.toml
examples/verifier_bench/: Cargo.toml
src/groth16/: marshalling.rs  mod.rs  proof.rs  verifier.rs  verifying_key.rs
