
[package]
name = "crusty3_zk-verifier-bench"
version = "0.0.1"
edition = "2018"

[dependencies]
crusty3_zk = { path = "../..",  default-features = false }
serde_json = "1.0"
fff = "0.2"
groupy = "0.3.1"
structopt = { version = "0.3", default-features = false }
pretty_env_logger = "0.4.0"
rand = "0.7.3"
paired = { version = "0.21.0", optional = true }
byteorder = "1"

[features]
default = ["groth16", "pairing"]
gpu = ["crusty3_zk/gpu"]
groth16 = ["crusty3_zk/groth16"]
blst = ["crusty3_zk/blst"]
pairing = ["crusty3_zk/pairing"]
pairing-serde = ["paired/serde"]

